# pupiline

./: .gitignore  README.md  pyproject.toml
pupiline/: align_pupil.R  calculate_area.py  eye_interpolation.py  fit_ellipse.py  init.py
